--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -47,4 +47,15 @@
       }
     }
   }
+  .home-form__footer {
+    margin-top: 40px;
+    width: 100%;
+    text-align: center;
+    .home-btn__submit {
+      width: 50%;
+      margin: 0 auto;
+      border-radius: 5px;
+      font-size: 36px;
+    }
+  }
 }
