--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,4 @@
 @import './assets/styles/header';
 @import './assets/styles/public';
 @import './assets/styles/home';
+@import './assets/styles/products';
