--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -6,6 +6,11 @@
   height: 90px;
   background-color: $base_bg_color;
   padding: 0 20px;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 100;
   @at-root {
     .example-header__left {
       @include flexbox(center);
