--- a/src/assets/styles/public.scss
+++ b/src/assets/styles/public.scss
@@ -5,6 +5,7 @@ main {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  padding-top: 90px;
   .example-wrapper {
     flex: 1;
   }
