--- a/src/assets/styles/products.scss
+++ b/src/assets/styles/products.scss
@@ -29,19 +29,22 @@
         i {
           font-size: 45px;
         }
-        span {
-          color: #333;
-          margin: 0 10px;
-        }
       }
-      .products-item__middle {
+      .products-item__left {
         flex: 1;
-        text-align: left;
-        height: 100%;
-        line-height: 120px;
-        margin-left: 20px;
+        display: flex;
+        align-items: center;
         h3 {
           color: #333;
+          margin-left: 20px;
+        }
+      }
+      .products-item__right {
+        p {
+          color: #333;
+          width: 30px;
+          text-align: center;
+          margin: 0 10px;
         }
       }
     }
